--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
-
-  <script src="music-background.jpg"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -21,6 +20,7 @@
             <h3 class="btn btn-warning heading"> AI MUSIC WEB APP
               <br>
               <span class="note">NOTE - Get Your Left Hand Wrist To Play The Peter Pan Them Song. Get Your Right Hand Wrist To Play The Harry Potter Theme Song.
+                <br>
                 Be At Least 2 Feet Away From The Webcam So That Your Wrists Are Displayed Clearly.
               </span>
               </h3>
